[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nx_yaml"
version = "0.0.9"
description = "Fast Representation Graph for PyYAML using NetworkX"
dependencies = [
  "pyyaml",
  "networkx",
]

[project.urls]
"Source" = "https://github.com/colltoaction/nx_yaml"
